# cell_dt

./: .gitignore  CDATA_Digital_Twin_Article.md  CLAUDE.md  Cargo.toml  GAP_ANALYSIS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README_Configuration_Via_Files.md  README_Performance_Optimizations.md  README_Python_Bindings.md  README_RU.md  README_Stem_Cell.md  README_Testing_And_Documentation.md  RECOMENDATION.md  RECOMMENDATION.md  TODO.md  ToDo.md  asymmetric_division_logic.md  cdata_inducer_correction.md  cell_dt_launcher.sh  create_morphogen_article.py  manage_configs.sh  readme_ru.md  run.sh  run_gui.sh  run_performance_tests.sh  run_tests.sh  run_viz.sh  run_with_config.sh
.github/workflows/: ci.yml
Materials/2001/: 2001_Создание искусственных самоадаптирующихся систем на основе Теории Прогноза.docx
Materials/2003/: 2003_The Opportunities of the Solution of the Conflict of Interests over the Caucasus.docx
Materials/2005/: 2005_Centriolar Mechanisms of Differentiation and Replicative Aging of Higher Animal Cells.docx  2005_Potential role of centrioles in determining the morphogenetic status of animal somatic cells.docx
Materials/2012/: 2012_RNA in centrosomes _  Structure and possible functions.docx
Materials/2019/2019_D+Q/: Author-Agreement.docx  Cover.docx  Jaba-Tkemaladze_DasatinibQuercetin_Article.docx
Materials/2023/: 202306_The centriolar hypothesis of differentiation and replicative senescence.docx  202307_Structure and possible functions of centriolar RNA with reference to the centriolar hypothesis of differentiation and replicative senescence.docx  202309K_Comparative Analysis of drugs that improve the Quality of Life and Life Expectancy.docx  202309_Is the selective accumulation of oldest centrioles in stem cells the main cause of organism ageing .docx  202310M_The planaria Schmidtea mediterranea as a model system for the study of stem cell biology.docx  202311_Molecular mechanism of aging and therapeutic advances through targeting glycative and oxidative stress.docx
Materials/2023/2023_Reduction/: Highlights.docx  Reduction of stem cells over time.docx
Materials/2024/202401_Planaria/: Abstract.docx  Conflict of interest.docx  Cover letter.docx  Highlights.docx  Referee.docx  Regeneration potential of the  planarian_.docx  Statements and Declarations.docx  Supplemental files_.docx  Title Page.docx  To do - Reviewers.docx  graphical_abstract.psd
Materials/2024/202404_Mineral ice cream/: ნერწყვის ოსმოლარობის ცვლილება (Sosm mmol_Kg) სხეულის მასის დაკარგვასთან შედარებით.xlsx  რეჰიდრატაციული სითხის_ნაყინის გავლენა სანერწყვე ოსმოლარობაზე.xlsx
Materials/2024/202405_Cell centre/: Cell centre.docx
Materials/2024/202406_Intelligence/: Intelligence.docx
Materials/2024/202410_Absence of centrioles/: 202410_Absence of centrioles.docx
Materials/2024/202410_Microelementoses/: 202410_Microelementoses.docx
Materials/2024/202410_The rate of stem cell division/: The rate of stem cell division decreases with age.docx
Materials/2024/202411_Balneological Abastumani/: Abastumani Resort_ Balneological Heritage and Modern Potential.docx
Materials/2024/202411_Stem cell division temp/: The rate of stem cell division decreases with age.docx
Materials/2024/202412_Automated Governance/: Automated Governance.docx  Ru_Automated Governance.docx
Materials/2024/202412_Elimination of centrioles/: Elimination of centrioles.docx
Materials/2025/202501_ Differentiation of somatic cells of multicellular animals/: Differentiation of Somatic Cells in Multicellular Organisms.docx  Differentiation of somatic cells of multicellular animals.docx  Дифференциация соматических клеток многоклеточных животных.docx
Materials/2025/202501_Anatomy, Biogenesis, and Role in Cell Biology of Centrioles/: Anatomy, Biogenesis, and Role in Cell Biology of Centrioles(1).docx  Anatomy, Biogenesis, and Role in Cell Biology of Centrioles(2).docx  Anatomy, Biogenesis, and Role in Cell Biology of Centrioles.docx  Анатомия, биогенез и роль в клеточной биологии центриолей.docx
Materials/2025/202501_Replicative Hayflick Limit/: Replicative Hayflick Limit(1).docx  Replicative Hayflick Limit(2).docx  Replicative Hayflick Limit.docx  Репликативный Лимит Хейфлика.docx
Materials/2025/202501_Stem cell systems and regeneration/: Stem cell systems and regeneration.docx
Materials/2026/20260115_Strategic Timekeepers/: Coverletter.docx  (+3 more)
Materials/Thesis/: 235.docx  The Main Reason for the Aging of the Body is the Accumulation of Irreparable Old Centrioles.docx  Главная Причина Старения Организма - Накопление Нерепарируемых Старых Центриолей.docx
configs/: README.md  benchmark.toml  custom.toml  default.toml  default.yaml  development.toml  example.toml  example.yaml  production.toml
crates/cell_dt_config/: Cargo.toml
crates/cell_dt_core/: Cargo.toml
crates/cell_dt_core/src/: components.rs  error.rs  lib.rs  module.rs  simulation.rs  world.rs
crates/cell_dt_core/tests/: integration_test.rs
crates/cell_dt_gui/: Cargo.toml
crates/cell_dt_gui/src/: lib.rs  main.rs
crates/cell_dt_io/: Cargo.toml
crates/cell_dt_io/src/: cdata_exporter.rs  config.rs  csv_exporter.rs  lib.rs
crates/cell_dt_modules/asymmetric_division_module/: Cargo.toml
crates/cell_dt_modules/asymmetric_division_module/src/: lib.rs
crates/cell_dt_modules/human_development_module/: Cargo.toml
crates/cell_dt_modules/human_development_module/src/: aging.rs  damage.rs  development.rs  inducers.rs  interventions.rs  lib.rs  organism.rs  tissues.rs
crates/cell_dt_python/: Cargo.toml  cell_dt_demo.ipynb  example.py  setup.py
crates/cell_dt_python/src/: lib.rs
crates/cell_dt_viz/: Cargo.toml
crates/cell_dt_viz/src/: cdata_timeseries.rs  heatmap.rs  lib.rs  plot2d.rs  plot3d.rs  timeseries.rs
examples/: Cargo.toml
io_output/configs/: config.json
io_output/data/: simulation_step_000050.csv  simulation_step_000100.csv  simulation_step_000150.csv  simulation_step_000200.csv
sensitivity_output/: sa_results.csv
website/: index.html
website/css/: cdata.css
website/js/: cdata-core.js  cdata-modules.js
(+99 files in other folders)
