[workspace]
resolver = "2"
members = [
    "crates/cell_dt_core",
    "crates/cell_dt_io",
    "crates/cell_dt_python",
    "crates/cell_dt_modules/cell_cycle_module",
    "crates/cell_dt_modules/centriole_module",
    "crates/cell_dt_modules/transcriptome_module",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
hecs = "0.10"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
bincode = "1.3"
anyhow = "1.0"
rand = "0.8"
