[package]
name = "cell_dt_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
cell_dt_core = { path = "../cell_dt_core" }
cell_dt_config = { path = "../cell_dt_config" }
centriole_module = { path = "../cell_dt_modules/centriole_module" }
cell_cycle_module = { path = "../cell_dt_modules/cell_cycle_module" }
transcriptome_module = { path = "../cell_dt_modules/transcriptome_module" }
asymmetric_division_module = { path = "../cell_dt_modules/asymmetric_division_module" }
stem_cell_hierarchy_module = { path = "../cell_dt_modules/stem_cell_hierarchy_module" }
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
directories = "5.0"

[[bin]]
name = "cell_dt_gui"
path = "src/main.rs"
