[package]
name = "cell_dt_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
cell_dt_core = { path = "../cell_dt_core" }
human_development_module = { path = "../cell_dt_modules/human_development_module" }
myeloid_shift_module = { path = "../cell_dt_modules/myeloid_shift_module" }
plotters = "0.3.5"
kiss3d = "0.35.0"
nalgebra = "0.32"
rand.workspace = true
log.workspace = true
rayon.workspace = true
